# kristofersxyz

./: '  .env.example  .gitignore  .sqruff  Cargo.toml  Dockerfile  LICENSE  README.md  config.json  config.json.example  docker-compose.yml  justfile  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: clone_karbs.yml  lint.yml  test.yml
config/: base.toml  production.toml
end2end/tests/: example.spec.ts
karbs/: apps.py  urls.py  views.py
kristofersxyz/: asgi.py  settings.py  urls.py  wsgi.py
kristofersxyz/apps/karbs/: apps.py  views.py
kristofersxyz/apps/main/: urls.py  views.py
kristofersxyz/apps/projects/: urls.py  views.py
main/: forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_delete_email.py  0003_initial.py
migrations/: 20260514120000_create_portfolio_content.sql
src/: configuration.rs  lib.rs  main.rs  manage.py  state.rs
src/app/: content.rs  layout.rs  mod.rs  pages.rs  routes.rs
src/apps/main/: urls.py  views.py
src/apps/main/templates/: index.html
src/apps/projects/: urls.py  views.py
src/kristofersxyz/: settings.py  urls.py
src/static/main/css/: index.css  lightsaber.css  markdown.css  reset.css
src/static/main/js/: lightmode.js  lightsaber.js  typewriter.js
src/static/projects/js/: projects.js
src/templates/: layout.html
static/css/: index.css  layout.css  lightsaber.css
static/karbs/css/: karbs.css
static/main/audio/: csgo-throwing-flashbang-sound-effect.m4a
static/main/css/: button.css  colors.css  index.css  layout.css  lightsaber.css  main.css  markdown.css  navigation_button.css  projects.css  validation.css
static/main/js/: lightmode.js  lightsaber.js  navigation.js  text_swap.js  typewriter.js  validation.js
static/projects/css/: projects.css
static/projects/js/: projects.js
style/: main.css  main.scss
templates/: layout.html
templates/karbs/: instructions.html  karbs  karbs.sh
templates/main/: about.html  contacts.html  index.html  lightsaber.html  projects.html  validation.html
templates/projects/: projects.html
templates/projects/karbs/: instructions.html  karbs
templates/projects/traffic_light_detector/: traffic_light_detector.html
