[metadata]
name = kristofersxyz
description = Kristofers Solo website
author = Kristofers Solo
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages = kristofersxyz
install_requires =
    Django>=4.1
    fontawesomefree>=6.2.1

python_requires = >=3.10
package_dir = =.
zip_safe = no

[options.extras_require]
testing =
    flake8>=6.0.0
    mypy>=0.991
    pytest-cov>=4.0.0
    pytest>=7.2.0
    tox>=3.27.1

[options.package_data]
detector = py.typed

[flake8]
max-line-length = 160
